fix team description

--- a/index.html
+++ b/index.html
@@ -166,11 +166,13 @@
             </div>
             <h3 class="wow fadeInDown delay-06s">Anthony Durussel</h3>
             <span class="wow fadeInDown delay-06s"
-              >Ingénieur en systèmes IA</span
+              >Senior Full Stack Software Engineer</span
             >
             <p class="wow fadeInDown delay-06s">
-              Expert en solutions IA, Anthony accompagne les entreprises dans la
-              réalisation de projets sur mesure exploitant la puissance de l'IA.
+              Ayant obtenu un master en systèmes de communication à l'EPFL,
+              Anthony cumule plus de 15 ans d'expérience dans le développement.
+              Passionné par l'intelligence artificielle, il perfectionne son
+              expertise chaque jour en concevant des solutions innovantes.
             </p>
           </div>
         </div>
@@ -189,6 +191,11 @@
                 <div class="contact_info">
                   <div class="detail">
                     <h4>Lovaroc Sàrl</h4>
+                    <p>Route de la Tour 10<br />3963 Crans-Montana</p>
+                  </div>
+                  <div class="detail">
+                    <h4>Tél:</h4>
+                    <p>+41 79 230 91 40</p>
                   </div>
                   <div class="detail">
                     <h4>Email:</h4>
